--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,13 +4,14 @@
     <base href="./" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>blog</title>
+    <title>ESP Blog</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webapp" />
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
+    <script src="https://cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
 </head>
 <body>
     <!--[if lt IE 9]>
